--- a/styles.css
+++ b/styles.css
@@ -4251,7 +4251,25 @@ body.dark #progressbar {
   border-color:#ddd;
 }
 
+#modalLoadDescription {
+  display: none;
+}
 
+#modalLoadNormalButtons {
+  display: none;
+}
+
+#modalLoadImportButtons {
+  display: none;
+  padding-bottom: 15px;
+}
+
+#fileselection {
+  display: none;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  
+}
 
 #loadfile_container {
   width: 100%;
@@ -4260,6 +4278,15 @@ body.dark #progressbar {
   margin-bottom: 10px;
   overflow-y: auto;
   height: 60dvh;
+  display: none;
+}
+
+#loadfile_container.compress {
+  height: 200px;
+  padding-top: 70px;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #filecontent {
