--- a/styles.css
+++ b/styles.css
@@ -1584,6 +1584,7 @@ a.button.disabled:hover, a.button.disabled:active {
   color:rgb(190,190,190);
   background-color:rgb(240,240,240);
   cursor:not-allowed;
+  pointer-events: none;
 }
 
 a.button.tinybutton {
@@ -4279,14 +4280,19 @@ body.dark #progressbar {
   overflow-y: auto;
   height: 60dvh;
   display: none;
+  /*transition: all ease 1s;*/
 }
 
-#loadfile_container.compress {
+#loadfile_container.collapse {
   height: 200px;
   padding-top: 70px;
   width: 70%;
   margin-left: auto;
   margin-right: auto;
+}
+
+#loadfile_container.compress {
+  height: 50dvh;
 }
 
 #filecontent {
