--- a/styles.css
+++ b/styles.css
@@ -3155,8 +3155,13 @@ body.dark .modal-body a.button_paedimode:hover {
   margin: 1px;
 }
 
-.numkey.numactive {
-  box-shadow:inset 1px 4px 6px 0px rgb(0 0 0 / 30%);
+.numkey:hover {
+  border: 1px solid #ccc;
+}
+.numkey:active {
+  box-shadow:inset 1px 1px 2px 0px rgb(0 0 0 / 30%);
+  transform: translateX(1px) translateY(1px);
+  border: 1px solid #bbb;
 }
 
 .numkey.special {
@@ -3851,6 +3856,9 @@ tr.subheading7 {
 }
 .pop_title_box.shadow {
   box-shadow: 0px 20px 0px #4caf50
+}
+.pop_title_box.shadow.active {
+  box-shadow: inset 0px 4px 6px #0c4432, 0 20px 0 #4caf50, inset 0px 0px 6px 1px #d1e7e0
 }
 .pop_title_box.infrate {
   /*border-color: #ddd;*/
