--- a/styles.css
+++ b/styles.css
@@ -6219,32 +6219,46 @@ body.dark #addeventtext{
 .input-container {
   width: 100%;
   display: flex;
-  margin: 9px;
+  padding: 1rem 9px;
 }
 
 .input-left {
+  flex-basis: 55%;
+  display: flex;
+  align-items: center;
+}
+
+.input-description {
+  font-size: 0.65rem;
+  align-self: center;
+  text-align: center;
+  margin-left: 6px;
+  margin-right: 6px;
+  line-height: 16px;
+  
+}
+
+.input-entry {
+  flex-grow: 1;
+}
+
+.input-right {
   flex-basis: 45%;
   display: flex;
 }
 
-.input-description {
-  flex-grow: 1;
-  font-size: 0.65rem;
-  align-self: center;
+.input-target-icon {
+  color: #333;
+  background: rgb(128,128,128,0.2);
+  border-radius: 1rem;
+  flex-basis: 30px;
+  height: 30px;
+  line-height: 30px;
   text-align: center;
-  margin-top: 18px;
-}
-
-.input-entry {
-  margin-top: 18px;
-}
-
-.input-right {
-  flex-basis: 55%;
-  display: flex;
 }
 
 .icon {
+  color: white;
   font-size: 80%;
   background: #fff4;
   border-radius: 1rem;
@@ -6256,19 +6270,41 @@ body.dark #addeventtext{
 
 input[type=number].input-entry-field {
   border-radius: 1rem 0 0 1rem;
-  border: 1px solid #aaa;
+  border: 1px solid #4CAF50;
   margin: 0;
-  width: 110px;
+  width: 100%;
   height: 36px;
 }
 
+.input-button-container {
+  flex-basis: 50%;
+}
 a.input-button {
   color: white;
   font-size: 90%;
-  min-width: 85px;
+  min-width: 70px;
+  width: 100%;
   height: 36px;
   display: flex;
-  margin-top: 18px;
+  margin-right: 0px;
+}
+
+@media screen and (max-width: 465px) {
+  #input-description-ce-line1 span {
+    display: none;
+  }
+  #input-description-ce-line1:after {
+    content: 'CeT';
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #input-description-ce-line1 span {
+    display: none;
+  }
+  #input-description-ce-line1:after {
+    content: 'CeT';
+  }
 }
 
 #btn_startCet0 {
@@ -6277,8 +6313,14 @@ a.input-button {
 }
 
 #btn_pauseCet0 {
-  border: 1px solid red;
-  background: red;
+  border: 1px solid rgb(128,128,128,0.5);
+  background: transparent;
+  color: rgb(128,128,128,0.8);
+  margin-left: 4px;
+}
+
+#btn_pauseCet0 > .icon {
+  background: rgba(128,128,128,0.4);
 }
 
 .input-button-text {
