--- a/styles.css
+++ b/styles.css
@@ -1827,7 +1827,8 @@ a.interactionstab.active {
   position: absolute;
   background: #eee;
   height: 0px;
-  width: calc(100% - 2rem - 44px);
+  width: calc(100% - 2rem - 42px);
+  box-shadow: 0px 6px 8px -5px rgba(0,0,0,0.15);
   top: 82px;
   right: 1rem;
   border-radius: 0px 0px 9px 9px;
@@ -1845,7 +1846,7 @@ a.interactionstab.active {
 }
 
 #preview-expand-box > div:first-child {
-  margin-top: 10px;
+  margin-top: 26px;
 }
 
 #warning {
