responsive web design CSS

--- a/styles.css
+++ b/styles.css
@@ -1807,7 +1807,7 @@ a.interactionstab.active {
 }
 
 .narrowbodywrapper .prompts_card {
-  width:calc(100% - 1.5rem - 30px);
+  
 }
 
 #warning {
@@ -5004,7 +5004,10 @@ body.dark .infusionratedropdownitem:hover {
 
   }
   .hamburger {
-    right:calc((100% - 768px)/2 + 16px);
+    right: calc((100% - 768px)/2 + 16px);
+  }
+  .narrowbodywrapper .hamburger {
+    right: 1rem;
   }
 
   .top_subtitle {
@@ -5034,7 +5037,7 @@ body.dark .infusionratedropdownitem:hover {
     box-shadow:0px 6px 8px -5px rgb(0 0 0 / 15%);
     border-radius: 9px 0 0 0;
     background:#fff;
-    width:340px;
+    width:calc(50% - 50px);
     height:95px;
     border-bottom:2px solid #ddd;
   }
@@ -5052,7 +5055,6 @@ body.dark .infusionratedropdownitem:hover {
     margin:auto;
   }  
   .prompts_card {
-    width:calc(768px - 340px - 1.5rem);
     margin:0;
     border-width:2px;
     box-shadow:none;
@@ -5062,8 +5064,8 @@ body.dark .infusionratedropdownitem:hover {
     position:fixed;
     top:80px;
     z-index:10;
-    left:calc((100% - 768px)/2 + 340px);
-    width:calc(768px - 340px - 0.5rem);
+    left:calc((100% - 768px)/2 + 320px);
+    width:calc(768px - 320px - 0.5rem);
     padding-right:0.5rem;
     padding-left:0.5rem;
     padding-top:0.5rem;
@@ -5074,16 +5076,14 @@ body.dark .infusionratedropdownitem:hover {
     border-bottom:2px solid #ddd;
   }
 
-  .narrowbodywrapper {
-    width: 768px;
-    left: 0;
-    margin: auto;
+  #bodywrapper.narrowbodywrapper {
+    width: 100%;
     position: static;  /*changed from relative to static to avoid bug of no cursor: pointer on leftbar*/
   }
   .narrowbodywrapper>#parallax1 {
-    width: 668px;
+    width: calc(100% - 100px - 1rem);
     padding-left: 0;
-    margin-left: 100px;
+    margin-left: calc(100px + 0.5rem);
     background: #7B8092;
   }
 
@@ -5092,8 +5092,8 @@ body.dark .infusionratedropdownitem:hover {
     background: #222;
   }
   .narrowbodywrapper>#parallax2 {
-    width: 668px;
-    margin-left: 100px;
+    width: calc(100% - 100px - 0.5rem);
+    margin-left: calc(100px + 0.5rem);
     padding-left: 0;
     background: #7B8092;
   }
@@ -5101,20 +5101,20 @@ body.dark .infusionratedropdownitem:hover {
     background: #222;
   }
   .narrowbodywrapper>#controlpanel {
-    margin-left: 100px;
-    width: calc(668px - 0.5rem);
+    margin-left: calc(100px + 0.5rem);
+    width: calc(100% - 100px - 1rem);
   }
   .narrowbodywrapper #prompts_container {
-    left:  calc(50% - 384px + 100px + 270px);
-    width:  390px;
+    left: calc(50% - 0.5rem);
+    width: 50%;
   }
   .narrowbodywrapper .prompts_card {
-    width: calc(390px - 1rem);
+    width: calc(100% - 1rem);
   }
   .leftbar {
     padding-top: 100px;
     width: 100px;
-    left: calc(50% - 384px);
+    left: 0.5rem;
     background: transparent;
   }
   .propofol {
@@ -5308,6 +5308,68 @@ body.dark #pastschemeCOPY {
   }
 }
 
+
+
+
+#preview-expand-button {
+  position: absolute;
+  right: 1rem;
+  z-index: 1;
+  top: 82px;
+  text-align: center;
+  height: 20px;
+  width: 100px;
+  font-weight: bold;
+  background: #a9c5e4;
+  font-size: 75%;
+  color: black;
+  border-radius: 0px 0px 9px 9px;
+  padding-top: 2px;
+  display: none;
+  cursor: pointer;
+}
+
+#preview-expand-box {
+  position: absolute;
+  background: #eee;
+  height: 0px;
+  width: calc(100% - 2rem - 41px);
+  box-shadow: 0px 6px 8px -5px rgba(0,0,0,0.15);
+  top: 82px;
+  right: 1rem;
+  border-radius: 0px 0px 9px 9px;
+  z-index: 0;
+  border: 1px solid #ccc;
+  border-top: 0;
+  font-size: 0.85rem;
+  /* padding: 10px; -> removed to avoid animation got height bug */
+  overflow-y: scroll;
+  transition: 0.3s all ease;
+}
+
+#preview-expand-box.expand {
+  height: 220px;
+}
+
+#preview-expand-box > div:first-child {
+  margin-top: 26px;
+}
+
+#preview-expand-box > div > div.timespan {
+  background: #ddd;
+  border-color: #ccc;
+}
+
+body.dark #preview-expand-box {
+  background: #303030;
+}
+
+body.dark #preview-expand-box > div > div.timespan {
+  background: #303030;
+  border-color: #999;
+}
+
+
 @media (max-height:480px) {
   #parallax3 {
     display:none;
@@ -5379,6 +5441,18 @@ body.dark #pastschemeCOPY {
   }
   .prompts_card {
     width:calc(100% - 2rem); 
+  }
+  .narrowbodywrapper .prompts_card {
+    width: calc(100% - 1.5rem - 30px);
+  }
+  #preview-expand-box {
+    top: 227px;
+    right: 2rem;
+    width: calc(100% - 3.5rem - 41px);
+  }
+  #preview-expand-button {
+    top: 227px;
+    right: 2rem;
   }
   #controlpanel {
     padding-top: 0px;
@@ -5454,6 +5528,15 @@ body.dark #pastschemeCOPY {
     margin-top:0.5rem;
     width:calc(100% - 1rem); 
   }
+  #prompts_container.expand {
+    height: 92px;
+  }
+  #preview-expand-button {
+    visibility: hidden;
+  }
+  #preview-expand-box {
+    display: none;
+  }
   .narrowbodywrapper .prompts_card {
     width:calc(100% - 1rem);  
   }
@@ -5494,16 +5577,16 @@ body.dark #pastschemeCOPY {
     background:#eee;
     border-radius: 9px 0 0 0;
     box-shadow:none;
-    width:340px;
+    width:320px;
     height:92px;
     border-bottom:2px solid #ddd;
   }
   #prompts_container {
     border-radius: 0 9px 0 0 ;
-    width:calc(768px - 340px - 1rem);
+    width:calc(768px - 320px - 1rem);
     /*transform:translate(300px,-90px);*/
     position:absolute;
-    left:calc((100% - 768px)/2 + 340px + 0.5rem);
+    left:calc((100% - 768px)/2 + 320px + 0.5rem);
     top:80px;
     height:92px;
     box-shadow:none;
@@ -5513,12 +5596,10 @@ body.dark #pastschemeCOPY {
     padding-top:0px;
     /*box-shadow:inset 0px 9px 8px -6px rgb(0 0 0 / 30%);*/
   }
-  .narrowbodywrapper>#parallax2 {
-    background: #525769;
-  }
+
   .prompts_card {
     margin-top:0.5rem;
-    width:calc(768px - 340px - 1.5rem);
+    width:calc(768px - 320px - 1.5rem);
   }
   .darkmodebutton {
     opacity: 0;
@@ -5526,6 +5607,19 @@ body.dark #pastschemeCOPY {
   .installbutton {
     opacity: 0;
     pointer-events: none;
+  }
+  .narrowbodywrapper>#parallax2 {
+    background: #525769;
+  }
+  .narrowbodywrapper #parallax1container {
+    width: calc(50% - 50px);
+  }
+  .narrowbodywrapper #prompts_container {
+    width: 50%;
+    left:  calc(50% - 0.5rem);
+  }
+  .narrowbodywrapper .prompts_card {
+    width: calc(100% - 0.5rem);
   }
 }
 
@@ -6203,17 +6297,17 @@ body.dark #addeventtext{
     width: 968px;
   }
   .leftbar {
-    left: calc(50% - 484px)
+    left: calc(50% - 476px);
   }
   .narrowbodywrapper>#controlpanel {
     width: calc(868px - 0.5rem);
   }
   .narrowbodywrapper #prompts_container {
-    left: calc(50% - 384px + 200px + 270px);
-    width: 390px;
+    left: calc(50% + 24px);
+    width: 460px;
   }
   .narrowbodywrapper #parallax1container {
-    width: 480px;
+    width: 400px;
   }
   .narrowbodywrapper #parallax1 {
     width: 968px;
@@ -6488,65 +6582,6 @@ body.dark #btn_pauseCpt1_new {
   align-self: center;
 }
 
-
-
-#preview-expand-button {
-  position: absolute;
-  right: 1rem;
-  z-index: 1;
-  top: 82px;
-  text-align: center;
-  height: 20px;
-  width: 100px;
-  font-weight: bold;
-  background: #a9c5e4;
-  font-size: 75%;
-  color: black;
-  border-radius: 0px 0px 9px 9px;
-  padding-top: 2px;
-  display: none;
-  cursor: pointer;
-}
-
-#preview-expand-box {
-  position: absolute;
-  background: #eee;
-  height: 0px;
-  width: calc(100% - 2rem - 41px);
-  box-shadow: 0px 6px 8px -5px rgba(0,0,0,0.15);
-  top: 82px;
-  right: 1rem;
-  border-radius: 0px 0px 9px 9px;
-  z-index: 0;
-  border: 1px solid #ccc;
-  border-top: 0;
-  font-size: 0.85rem;
-  /* padding: 10px; -> removed to avoid animation got height bug */
-  overflow-y: scroll;
-  transition: 0.3s all ease;
-}
-
-#preview-expand-box.expand {
-  height: 220px;
-}
-
-#preview-expand-box > div:first-child {
-  margin-top: 26px;
-}
-
-#preview-expand-box > div > div.timespan {
-  background: #ddd;
-  border-color: #ccc;
-}
-
-body.dark #preview-expand-box {
-  background: #303030;
-}
-
-body.dark #preview-expand-box > div > div.timespan {
-  background: #303030;
-  border-color: #999;
-}
 
 
 /* end new input styles */
