--- a/styles.css
+++ b/styles.css
@@ -2188,7 +2188,7 @@ body.dark .loadduration {
 @keyframes progress2 {
   0%{opacity:1;}
   90%{opacity:1;}
-  97%{opacity:0;}
+  98%{opacity:0;}
   100%{opacity:0;}
 }
 #previewicon {
@@ -5545,7 +5545,8 @@ body.dark #preview-expand-box > div > div.timespan {
     display: none;
   }
   .narrowbodywrapper .prompts_card {
-    width:calc(100% - 1rem);  
+    width: calc(100% - 1rem);  
+    height: 74px;
   }
   .narrowbodywrapper #parallax2 {
     width: 100%;
@@ -5619,7 +5620,7 @@ body.dark #preview-expand-box > div > div.timespan {
     background: #525769;
   }
   .narrowbodywrapper #parallax1container {
-    width: calc(50% - 50px);
+    width: calc(50% - 100px - 0.5rem);
   }
   .narrowbodywrapper #prompts_container {
     width: 50%;
@@ -6095,7 +6096,7 @@ body.dark #chart2wrapper {
     background: rgba(255,255,255,0.01);
   }
   body.dark .hamburger {
-    right: calc((100% - 768px)/2 + 2px)
+    
   }
 }
 
@@ -6314,7 +6315,7 @@ body.dark #addeventtext{
     width: 460px;
   }
   .narrowbodywrapper #parallax1container {
-    width: 400px;
+    width: 402px;
   }
   .narrowbodywrapper #parallax1 {
     width: 968px;
@@ -6475,112 +6476,129 @@ a.input-button {
   }
 }
 
-#btn_startCet0_new {
+a.newbuttongreen {
   border-radius: 0 1rem 1rem 0;
   background: #4CAF50;
+}
+
+a.newbuttongrey > .icon {
+  background: rgba(128,128,128,0.4);
+}
+
+a.button.newbuttongreen:hover {
+  background-color: #187f18;
+}
+
+body.dark a.newbuttongreen {
+  border-left: 0;
+  background: rgb(16, 86, 63);
+  color: #cecece;
+}
+
+body.dark a.button.newbuttongreen:hover {
+  color: white;
+  background: #4caf50;
+}
+
+a.newbuttongrey {
+  border: 1px solid rgb(128,128,128,0.5);
+  background: transparent;
+  color: rgb(128,128,128,0.8);
+  margin-left: 4px;
+}
+
+a.button.newbuttongrey:hover {
+  background-color: rgba(128,128,128,0.7);
+  color:white;
+}
+
+body.dark a.newbuttongrey {
+  background: #303030;
+  color: #cecece;
+}
+
+body.dark a.button.newbuttongrey:hover {
+  color: white;
+}
+
+#btn_startCet0_new {
+
 }
 
 #btn_pauseCet0_new {
-  border: 1px solid rgb(128,128,128,0.5);
-  background: transparent;
-  color: rgb(128,128,128,0.8);
-  margin-left: 4px;
+
 }
 
 #btn_pauseCet0_new > .icon {
-  background: rgba(128,128,128,0.4);
+  
 }
 
 #btn_startCet1_new {
-  border-radius: 0 1rem 1rem 0;
-  background: #4CAF50;
+
 }
 
 #btn_pauseCet1_new {
-  border: 1px solid rgb(128,128,128,0.5);
-  background: transparent;
-  color: rgb(128,128,128,0.8);
-  margin-left: 4px;
+
 }
 
 #btn_pauseCet1_new > .icon {
-  background: rgba(128,128,128,0.4);
+  
 }
 
 #btn_startCpt0_new {
-  border-radius: 0 1rem 1rem 0;
-  background: #4CAF50;
+
 }
 
 #btn_pauseCpt0_new {
-  border: 1px solid rgb(128,128,128,0.5);
-  background: transparent;
-  color: rgb(128,128,128,0.8);
-  margin-left: 4px;
+
 }
 
 #btn_pauseCpt0_new > .icon {
-  background: rgba(128,128,128,0.4);
+  
 }
 
 #btn_startCpt1_new {
-  border-radius: 0 1rem 1rem 0;
-  background: #4CAF50;
+
 }
 
 #btn_pauseCpt1_new {
-  border: 1px solid rgb(128,128,128,0.5);
-  background: transparent;
-  color: rgb(128,128,128,0.8);
-  margin-left: 4px;
+
 }
 
 #btn_pauseCpt1_new > .icon {
-  background: rgba(128,128,128,0.4);
+  
 }
 
 body.dark #btn_startCet0_new {
-  border-left: 0;
-  background: rgb(16, 86, 63);
-  color: #cecece;
+
 }
 
 body.dark #btn_startCet1_new {
-  border-left: 0;
-  background: rgb(16, 86, 63);
-  color: #cecece;
+
 }
 
 body.dark #btn_startCpt0_new {
-  border-left: 0;
-  background: rgb(16, 86, 63);
-  color: #cecece;
+
 }
 
 body.dark #btn_startCpt1_new {
-  border-left: 0;
-  background: rgb(16, 86, 63);
-  color: #cecece;
+
 }
 
 body.dark #btn_pauseCet0_new {
-  background: #303030;
-  color: #cecece;
+
 }
 
 body.dark #btn_pauseCet1_new {
-  background: #303030;
-  color: #cecece;
+
 }
 
 body.dark #btn_pauseCpt0_new {
-  background: #303030;
-  color: #cecece;
+
 }
 
 body.dark #btn_pauseCpt1_new {
-  background: #303030;
-  color: #cecece;
+
 }
 
 
