--- a/styles.css
+++ b/styles.css
@@ -6096,7 +6096,7 @@ body.dark #chart2wrapper {
     background: rgba(255,255,255,0.01);
   }
   body.dark .hamburger {
-    
+    right: calc((100% - 768px)/2 + 16px);
   }
 }
 
